<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ad_img_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        tools:src="@android:color/darker_gray"
        android:contentDescription="@string/img_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ad_img_item"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="120dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/img_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@android:color/white" />
    <TextView
        android:id="@+id/ad_title"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/ad_img_view"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/title_mt"/>

    <ImageView
        android:id="@+id/ad_date_img"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/date_img"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_date_gray"
        app:layout_constraintStart_toEndOf="@id/ad_rating"
        app:layout_constraintTop_toBottomOf="@+id/ad_title" />

    <ToggleButton
        android:id="@+id/ud_toggle_favorite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/favorite_toggle"
        android:textOn=""
        android:textOff=""
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:text="@string/togglebutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ad_title"/>

    <TextView
        android:id="@+id/ad_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="2dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@id/ad_date_img"
        app:layout_constraintTop_toBottomOf="@+id/ad_title"
        tools:text="@string/date_mt"/>

    <ImageView
        android:id="@+id/ad_star_half"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/star_half_img"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_star_half_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_title" />
    <TextView
        android:id="@+id/ad_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/ad_star_half"
        app:layout_constraintTop_toBottomOf="@+id/ad_title"
        tools:text="@string/rating_mt"/>

    <TextView
        android:id="@+id/ad_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_img_item"
        tools:text="@string/overview_mt"/>

    <TextView
        android:id="@+id/ad_overview"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_over"
        tools:text="@string/detail_mt" />
    <Button
        android:id="@+id/ad_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/share"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>